--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,96 @@
     transform: rotate(360deg);
   }
 }
+
+:root{
+  --text-primary:#000;
+  --bgPrimary:#fff;
+ --bgSecondary: #F9F9F9;
+ --pink: #0071bd;
+ --light-blue: #e6f7ff;
+ --border: #d9d9d9;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a:hover{
+  color: var(--pink) !important;
+}
+
+.app{
+  display: flex;
+  overflow: hidden;
+}
+
+.navbar{
+  flex: 0.2;
+  background-color: rgb(0, 21, 41);
+}
+.main{
+  flex: 0.8;
+  width: 100%;
+ position:relative;
+ margin-left:0px;
+ 
+  
+}
+.nav-container{
+  position: fixed;
+  left: 0;
+  margin: 10px;
+  height: 100vh;
+  margin: 0px;
+  background-color: rgb(0, 21, 41);
+}
+
+.logo-container{
+  background-color: #001529;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  width: 100%;
+}
+
+.logo{
+  margin:0 0 0 15px;
+}
+
+.footer {
+  background-color: #001529;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+  
+}
+
+.home-heading-container{
+  display: block;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.home-title{
+  font-size: 1.4rem !important;
+}
+
+.show-more{
+  font-size: 1.3rem !important;
+  margin-top: 0px;
+  
+}
+
+
+.crypto-card-container{
+  min-height: 65vh !important;
+}
+.crypto-card{
+  min-width: 250px;
+}
+.crypto-card .crypto-image{
+  width:35px;
+}
